--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ site_theme               : "default"
 title                    : "Xinchen Wang 王欣辰"
 title_separator          : "-"
 name                     : &name "Xinchen Wang"
-description              : &description "Vegetable Dog of HITSZ"
-url                      : https://eshe0922.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+# description              : &description "Vegetable Dog of HITSZ"
+url                      : https://eshe0922.github.io/Eshe0922/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.png"
   name             : "Xinchen Wang"
   pronouns         : # example: "she/her"  
-  # bio              : "Short biography for the left-hand sidebar"
+  bio              : "A Vegetable Dog of HITSZ"
   # location         : "Earth"
   employer         : "Harbin Institute of Technology"
   uri              : # URL
