--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.png"
   name             : "Xinchen Wang"
   pronouns         : # example: "she/her"  
-  bio              : "A Vegetable Dog of HITSZ"
+  bio              : "A master's student at Harbin Institute of Technology, Shenzhen (HITSZ)"
   # location         : "Earth"
   employer         : "Harbin Institute of Technology"
   uri              : # URL
@@ -46,7 +46,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "https://github.com/Eshe0922"
+  github           : "Eshe0922"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
